# Oliver_Lang

./: CMakeLists.txt  CMakeUserPresets.json  Oliver.cpp  Oliver.h  OliverConfig.h.in  README.md  main.cpp  vcpkg.json
Components/: file_writer.h  parser.h  string_support_functions.h  text_reader.h  token_reader.h
Components/Compiler/: compiler.h
Components/Compiler/Data_Types/: let.h
Components/Compiler/Data_Types/base_configuration/: op_codes.h  regex_strings.h  system_fundamentals.h
Components/Compiler/Data_Types/fundamental_types/: __TODO__.txt  error.h  expression.h  format.h  lambda.h  list.h  logical_term.h  map.h  number.h  op_call.h  string.h  symbol.h
Components/Compiler/Data_Types/fundamental_types/support_types/: integer_value.h  tuple.h
Components/Compiler/Data_Types/fundamental_types/support_types/mpa/bit_register/: bit_register.h
Components/Compiler/Data_Types/fundamental_types/support_types/mpa/decimal/: decimal.cpp  decimal.h
Components/Compiler/Data_Types/fundamental_types/support_types/mpa/decimal/real_see_README/: real.cpp  real.h
Components/Compiler/Data_Types/fundamental_types/support_types/mpa/num_type/: num_type.cpp  num_type.h
Components/Compiler/Data_Types/fundamental_types/support_types/mpa/numeric_type/: numeric_type.cpp  numeric_type.h
Components/Compiler/Data_Types/fundamental_types/support_types/mpa/whole_number/: whole_number.cpp  whole_number.h
Components/Evaluator/: associative_operators.h  binary_operators.h  evaluator.h  function_operators.h  fundamental_operators.h  sequence_operators.h
_lib_demo/: CMakeLists.txt  MakeTable.cmake  mysqrt.cpp
lib_app/: CMakeLists.txt  app.cpp  app.h
lib_compiler/: CMakeLists.txt  compiler.cpp  compiler.h
lib_data_types/: Boolean.h  CMakeLists.txt  Error.h  Expression.h  Function.h  List.h  Number.h  Object.h  OpCall.h  OpCodes.h  Symbol.h  Text.h  Var.h  data_types.cpp  data_types.h
lib_evaluater/: CMakeLists.txt  evaluater.cpp  evaluater.h
lib_oliver_lang/: CMakeLists.txt  oliver_lang.cpp  oliver_lang.h
lib_oliver_lang/safe/types/: Boolean.h  Error.h  Expression.h  Format.h  Function.h  List.h  Number.h  Object.h  OpCall.h  OpCodes.h  Symbol.h  Text.h  Var.h  data_types.cpp  data_types.h
lib_oliver_lang/toolbox/: DEF_HEADER.h  text_support.cpp  text_support.h  tools.cpp  tools.h
lib_oliver_lang/unsafe/: Expression_Template.h  Operator_Templates.h  SeqVector.h
lib_text_parser/: CMakeLists.txt  text_parser.cpp  text_parser.h
lib_text_reader/: CMakeLists.txt  text_reader.cpp  text_reader.h
lib_text_support/: CMakeLists.txt  text_support.cpp  text_support.h
